--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,10 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+via_ir = true
+fs_permissions = [{ access = "read-write", path = "./"}]
+
+[fuzz]
+runs = 10_000
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
